# treeson

./: .gitignore  CMakeLists.txt  Makefile  README.md  debias.cpp  example.cpp  example_multitarg.cpp  monteprediction.cpp  monteprediction.h  multitarg.cpp  parquet.h  polyn.cpp  reducers.h  rf_multitarget.h  test_poly_interp.cpp  test_tag.cpp  treeson.h  utils.h  weighed_sampling.cpp
R/treeson/: DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
R/treeson/R/: treeson-package.R
R/treeson/src/: RcppExports.cpp  treeson-package.cpp
examples/: debias.cpp  example.cpp  example_multitarg.cpp  example_singletarg.cpp  mondrian.cpp  multitarg.cpp  polyn.cpp
py/treeson/: bindings.cpp  setup.py  test.py
py/treeson/include/: rf_multitarget.h  rf_singletarget.h  treeson.h
py/treeson/src/: bindings.cpp
py/treeson/treeson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_data/: polyn_A.csv
utils/: debiasing.h  mondrian.h  rf_multitarget.h  rf_singletarget.h  stopwatch.h  tinyqr.h
